chamber/styles/larger.css
@media screen and (min-width: 1080px) {
    header {
        display: flex;
        align-items: center;
        justify-content: center;
        padding: 0.25rem 0 0.25rem 0;
        border: 2px solid black;
        width: 100%;
    }

    header img {
        width: 6rem;
        margin-left: 1rem;
    }

    header h1 {
        font-size: 1.75rem;
        position: static;
        transform: none;
        margin-left: 1rem;
        width: 50%;
    }

    nav {
        display: flex;
        flex-direction: row;
        justify-content: center;
        font-size: 1.7rem;
        width: 90%;
        margin-right: 9rem;
    }

    nav a {
        display: block;
        background: none;
    }

    .switch {
        top: 1.5rem;
        right: 2%;
        width: 46px;
        height: 28px;
    }

    .slider:before {
        height: 22px;
        width: 22px;
    }

    input:checked+.slider:before {
        -webkit-transform: translateX(18px);
        -ms-transform: translateX(18px);
        transform: translateX(18px);
    }

    .hero-section {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
    }

    #action {
        font-size: 1.5rem;
        padding: 1rem;
        top: 0;
        left: 0;
        transform: translate(80%, 210%);
    }

    .home {
        display: flex;
        justify-content: space-around;
        flex-wrap: wrap;
        padding-bottom: 1.5rem;
    }

    #menu {
        display: none;
    }

    .hero-section {
        margin-bottom: 2rem;
    }

    #hero {
        margin-bottom: 2rem;
        height: 80vh;
        object-fit: cover;
        object-position: 0 60%;
    }

    section h2 {
        font-size: 2rem;
    }

    .section1,
    .section2,
    .section3 {
        width: 80%;
        margin: 2rem;
        font-size: 1.25rem;
        margin: auto;
    }

    .site-content {
        display: grid;
        grid-template-columns: 1fr 1fr;
        margin: 0 5rem 0 5rem;
    }

    .section1 {
        grid-column: 1/2;
        margin-top: 1rem;
        margin-bottom: 1.5rem;
        width: 75%;
        grid-row: 1/3;
    }

    .section1 p {
        border-bottom: none;
        margin: 1rem 0.5rem;
    }

    .events {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        align-items: center;
        justify-items: center;
    }

    .events img {
        display: grid;
        width: 6.5rem
    }

    p.event1 {
        grid-column: 1/3;
        grid-row: 1;
    }

    img.event1 {
        grid-column: 3/4;
        grid-row: 1;
    }

    p.event2 {
        grid-column: 2/4;
        grid-row: 2;
    }

    img.event2 {
        grid-column: 1/2;
        grid-row: 2;
    }

    p.event3 {
        grid-column: 1/3;
        grid-row: 3;
    }

    img.event1 {
        grid-column: 3/4;
        grid-row: 3;
    }

    .section2 {
        margin-top: 1rem;
        grid-column: 2/3;
        grid-row: 1/2;
        width: 80%;
    }

    .section3 {
        grid-column: 2/3;
        grid-row: 2/3;
        width: 75%;
    }

    section p {
        padding: 1rem;
    }

    .section2 p {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    section.section3 {
        margin-top: 2rem;
        margin-bottom: 3rem;
        padding-top: 0rem;
        padding-bottom: 0rem;

    }

    .section3 p {
        margin-top: 0.25rem;
    }

    .section-link {
        display: none;
    }

    .businesses {
        display: grid;
        grid-template-columns: 1fr 1fr;
        margin-top: 2rem;
    }

    .business1 {
        grid-column: 1/2;
        margin: auto;
        width: 75%;
        padding: 5rem;
    }

    .business2 {
        grid-column: 2/3;
        margin: auto;
        width: 75%;
    }

    footer {
        display: grid;
        grid-template-columns: 1fr 6fr;
    }

    .footer-break {
        display: inline;
        margin: 0 0.5rem;
    }

    .footer-info {
        display: flex;
        align-items: center;
        grid-column: 2/3;
        width: 90%;
        font-size: 1.25rem;
        justify-content: center;
        margin-left: 3rem;

    }

    .footer-info p {
        margin: 1rem 0.5rem 1.25rem;
    }

    .contact-info {
        display: block;
        justify-content: center;
        align-items: center;
        grid-column: 2/3;
        justify-content: center;
        width: 95%;
        font-size: 1.25rem;
    }

    .contact-info p {
        margin: 1rem;
    }

    footer img {
        display: flex;
        width: 9rem;
        margin: auto;
        grid-column: 1/2;
        grid-row: 1/3;
        margin-left: 3rem;
    }

    #discover {
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 2rem;
        padding-top: 2rem;
        padding-bottom: 2rem;
        align-items: start;
    }

    .left-content {
        display: block;
        display: flex;
        flex-direction: column;
        order: -1;
        width: 90%;
        margin-left: 5%;
        margin-right: auto;
    }

    #lastVisit {
        grid-column: 1/2;
        text-align: center;
    }

    .local-photos {
        grid-column: 2 / 3;
        width: 90%;
        height: auto;
    }

    .demographics {
        grid-column: 1/2;
        grid-row: 1/3;
        margin-left: 10%;
        margin-right: auto;
        text-align: center;
    }

    .demographics p {
        padding: 0.25rem;
        font-size: 1rem;
    }

    .local-photos img:hover {
        opacity: .5;
    }

    .local-photos p {
        text-align: center;
        margin-bottom: 2rem;
    }

    .city-council {
        grid-column: 1/2;
    }

    .city-council p {
        padding: 0;
    }

    .join {
        display: grid;
        grid-template-columns: 1fr 2fr;
    }

    form {
        grid-column: 1/2;
        margin: 1rem;
        width: 100%;
    }

    form input {
        margin-bottom: 1.5rem;
    }

    #join-form {
        padding: 0;
        margin: 0;
    }

    #contact-info {
        padding: 1.5rem;
        background: #cfcfcf;
    }

    table {
        height: 93.5%;
    }

    .join {
        padding: 4rem;
    }

    #membership-benefits th,
    #membership-benefits tr {
        padding: 1rem;
        font-size: 1rem;
    }

    select#benefit-level {
        display: flex;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 0;
    }

    form button {
        padding: 0.5rem;
    }
}

